# kenny2024

./: README.md  dprint.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: pages.yml
public/: TITLE.ase
src/: App.tsx  gameScene.ts  kaplay.ts  loadPublic.ts  main.ts  main.tsx  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/game/: gameScene.ts  kanny.ts  kaplay.ts  loadPublic.ts  main.ts
src/game/player/: CMP_cameraFollow.ts  CMP_movement.ts  CMP_playerTow4PPL.ts
src/game/utils/: IMP_kennyPackageTile.ts  MATH_angleToXyVec.ts
src/player/: CMP_cameraFollow.ts  CMP_movement.ts  CMP_playerMoveZone.ts  CMP_playerTow4PPL.ts  player.ts
src/player/components/: cameraFollow.ts  collide.ts  movement.ts  playerMoveZone.ts  playerTow4PPL.ts
src/scenes/: clickToStart.ts  game.ts  mainMenu.ts
src/utils/: IMP_kennyPackageTile.ts  MATH_XyToAngle.ts  MATH_angleToXyVec.ts  MISC_drawLoadingScreen.ts
